# retro-saper

./: CMakeLists.txt  Main.qml  README.md  gamesettingsmanager.cpp  gamesettingsmanager.h  main.cpp
resources/: Cell.qml  GameResultDialog.qml  HighScoresPage.qml  Main.qml  Minefield.qml  Options.qml  resources.qrc
src/: gamesettingsmanager.cpp  gamesettingsmanager.h  gametimer.cpp  gametimer.h  main.cpp  sapercontroller.cpp  sapercontroller.h  sapermodel.cpp  sapermodel.h
